@@ -1,7 +1,11 @@
 CVS HEAD
+  * API Changes
+    - Client: added new method - getMidiInstrumentEntries
+
   * Bug fixes:
     - null parameters and parameters with null names are now not sent
       to LinuxSampler
+    - fixed a bug in DB_INSTRUMENTS_JOB_INFO notifications
 
 jlscp v0.7a: 2007-12-06
   * Added support for monitoring the total number of active disk streams
